Fixed drafts list layout bugs

--- a/styles/list-mail.less
+++ b/styles/list-mail.less
@@ -57,6 +57,7 @@
 
 	.list-column.list-column-Participants {
 		padding: 0 0 0 4px;
+		margin-left: 25px;
 	}
 }
 
